[package]
name = "asm-lsp"
version = "0.9.0"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
edition = "2018"

description = "Language Server for x86/x86_64, ARM, RISCV, and z80 Assembly Code"

documentation = "https://docs.rs/asm-lsp/latest/asm_lsp/"
homepage = "https://github.com/bergercookie/asm-lsp"
repository = "https://github.com/bergercookie/asm-lsp"

readme = "README.md"

keywords = ["assembly", "language-server", "lsp", "tooling", "x86"]
categories = ["command-line-utilities", "development-tools"]
publish = true
exclude = ["samples/*", "demo/*"]
license = "BSD-2-Clause"


[lib]
name = "asm_lsp"
path = "src/lib.rs"
[[bin]]
name = "asm-lsp"
path = "src/bin/main.rs"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Taken from tree-sitter's `Cargo.toml`
# The lints below are a specific subset of the pedantic+nursery lints
# that we explicitly allow in the tree-sitter codebase because they either:
#
# 1. Contain false positives,
# 2. Are unnecessary, or
# 3. Worsen the code

# Using the URI type to identify open files is kind of unavoidable, tell clippy everything's gonna be ok
mutable_key_type = "allow"

branches_sharing_code = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
checked_conversions = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
fallible_impl_from = "allow"
fn_params_excessive_bools = "allow"
inline_always = "allow"
if_not_else = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
range_plus_one = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
# Only on nightly for now
# ref_option = "allow"
similar_names = "allow"
string_lit_as_bytes = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
transmute_undefined_repr = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
implicit_hasher = "allow"
# Only on nightly for now
# used_underscore_items = "allow"

[dependencies]
anyhow = "1.0.70"
# write to stderr instead of stdout
flexi_logger = "0.25.3"
log = { version = "0.4.17" }
lsp-server = "0.7.6"
lsp-types = "0.97.0"
regex = "1.7.2"
reqwest = { version = "0.11.15", features = ["blocking"] }
strum = "0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0.94"
serde = "1.0.158"
toml = "0.8.1"
home = "0.5.5"
once_cell = "1.18.0"
dirs = "5.0.1"
symbolic = { version = "12.8.0", features = ["demangle"] }
symbolic-demangle = "12.8.0"
url-escape = "0.1.1"
quick-xml = "0.35.0"
bincode = "1.3.3"
lsp-textdocument = "0.4.0"
tree-sitter = "0.22.6"
tree-sitter-asm = "0.22.6"
compile_commands = "0.3.0"

[dev-dependencies]
mockito = "1.2.0"
