[workspace]
resolver = "2"
members = ["asm-lsp", "asm_docs_parsing"]
default-members = ["asm-lsp"]

[workspace.package]
version = "0.9.0"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
edition = "2021"
description = "Language Server for x86/x86_64, ARM, RISCV, and z80 Assembly Code"
documentation = "https://docs.rs/asm-lsp/latest/asm_lsp/"
homepage = "https://github.com/bergercookie/asm-lsp"
repository = "https://github.com/bergercookie/asm-lsp"
readme = "README.md"
keywords = ["assembly", "language-server", "lsp", "tooling", "x86"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["samples/*", "demo/*"]
license = "BSD-2-Clause"

[workspace.dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
