[package]
name = "asm-lsp"
publish = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "asm_lsp"
path = "lib.rs"

[[bin]]
name = "asm-lsp"
path = "bin/main.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
serde.workspace = true
dirs.workspace = true
toml.workspace = true
clap.workspace = true
serde_json.workspace = true
schemars.workspace = true
# write to stderr instead of stdout
flexi_logger = "0.30.1"
log = { version = "0.4.17" }
lsp-server = "0.7.6"
lsp-types = "0.97.0"
regex = "1.7.2"
reqwest = { version = "0.12.8", features = ["blocking"] }
strum = "0.27.1"
strum_macros = "0.27.1"
home = "0.5.5"
symbolic = { version = "12.8.0", features = ["demangle"] }
symbolic-demangle = "12.8.0"
url-escape = "0.1.1"
quick-xml = "0.37.4"
lsp-textdocument = "0.4.0"
# TODO: Upgrade to 0.25.3
tree-sitter = "0.22.6"
tree-sitter-asm = "0.22.6"
compile_commands = "0.3.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
htmlentity = "1.3.2"

[dev-dependencies]
mockito = "1.2.0"

[lints]
workspace = true
