[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
schemars.workspace = true
serde_json.workspace = true
asm-lsp = { path = "../asm-lsp" }
