[package]
name = "process_riscv_yaml"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true

[[bin]]
name = "process_riscv_yaml"
path = "process_riscv_yaml.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
asm-lsp = { path = ".." }

[dev-dependencies]
tempfile = "3.16.0"

[lints]
workspace = true